# remonstered

./: .gitignore  README.dott.md  README.ft.md  README.md  audio.py  build.bat  build.dott.bat  build.dott.sh  build.ft.bat  build.ft.sh  convert.py  cutscenes.py  lpak.py  missing.py  pyproject.toml  remonster.py  requirements.txt  resource.py  utils.py
.github/workflows/: main.yml
dott/: extract.json  monster.tbl  stream.json  tags.tbl
ft/: embedded.tbl  extract.json  monster.tbl  stream.json  tags.tbl
src/remonstered/: convert.py  cutscenes.py  extract.py  lpak.py  missing.py  remonster.py  resource.py  soundbank.py  streamview.py
src/remonstered/core/: audio.py  convert.py  cutscenes.py  localize.py  lpak.py  remonster.py  sou.py  soundbank.py  streamview.py  utils.py
src/remonstered/scripts/: remonster.py
src/scripts/: remonster.py
tests/: test_remonstered.py
