[tool.poetry]
name = "remonstered"
version = "1.12.0"
description = "Builds sound resource for ScummVM using High-Quality SFX and Speech from remastered versions."
authors = ["BLooperZ <blooperz@users.noreply.github.com>"]
license = "LGPL-3.0-or-later"
readme = "README.md"
keywords = ["dott", "ft", "remastered", "scumm"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"
pydub = "^0.24.1"
tqdm = "^4.56.0"
fsb5 = {git = "https://github.com/BLooperZ/python-fsb5.git"}
nutcracker = {version = "0.3.14", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.6.4"
mypy = "^0.790"
flake8 = "^3.8.4"
black = "^20.8b1"
nitpick = "^0.23.1"
pyinstaller = "^4.2"

[tool.poetry.extras]
cutscenes = ["nutcracker"]

[tool.poetry.urls]
repository = "https://github.com/blooperz/remonstered"

[tool.poetry.scripts]
remonster = "remonstered.scripts.remonster:main"
lpak = "remonstered.core.lpak:main"

[tool.black]
skip-string-normalization = true

[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/mypy.toml"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
